<resources>
    <string name="app_name">CV</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="home_label">Curriculum Vitae</string>

    <string name="experience_label">Experiencia Laboral</string>
    <string name="academy_label">Educación</string>
    <string name="courses_label">Cursos</string>
    <string name="certifications_label">Certificaciones</string>
    <string name="technical_label">Habilidades Técnicas</string>
    <string name="extracurricular_label">Cocurriculares</string>
    <string name="contests_label">Concursos</string>
    <string name="books_label">Libros Leídos</string>
    <string name="facts_label">Datos Curiosos</string>
    <string name="profile_label">Perfil</string>

    <string name="menu_communicate">Contacto</string>
    <string name="menu_send">Enviar CV</string>
    <string name="title_activity_information">Información</string>
    <string name="error_message">Ocurió un error</string>
    <string name="send_whatsapp"><a href="">Mándame un WhatsApp</a></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current">Actual</string>

    <plurals name="yearsOld">
        <item quantity="one">%d año</item>
        <item quantity="other">%d años</item>
    </plurals>

</resources>
