<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_academy"
            android:icon="@drawable/ic_academy"
            android:title="@string/academy_label" />
        <item
            android:id="@+id/nav_experience"
            android:icon="@drawable/ic_work"
            android:title="@string/experience_label" />
        <item
            android:id="@+id/nav_certifications"
            android:icon="@drawable/ic_class"
            android:title="@string/certifications_label" />
        <item
            android:id="@+id/nav_extracurricular"
            android:icon="@drawable/ic_extracurricular"
            android:title="@string/extracurricular_label" />
    </group>

    <item android:title="@string/menu_communicate">
        <menu>
            <item
                android:id="@+id/nav_sendCV"
                android:icon="@drawable/ic_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
