<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="information"
            type="com.roger.cv.model.Information" />

        <variable
            name="clickListener"
            type="com.roger.cv.view.home.HomeClickListener" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.roger.cv.InformationActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_light_background">

            <ImageView
                android:id="@+id/image_header_cover"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/home_background" />

            <ImageButton
                android:id="@+id/imagebutton_user_profile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_below="@+id/image_header_cover"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-105dp"
                android:background="@null"
                android:circularImageUrl="@{information.imageURL}"
                android:elevation="4dp"
                android:onClick="@{clickListener::onProfileClicked}"
                android:padding="3dp"
                android:scaleType="centerCrop" />

            <ProgressBar
                android:id="@+id/progress_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_header_cover"
                android:layout_centerInParent="true"
                android:layout_marginTop="150dp"
                tools:visibility="gone" />

            <TextView
                android:id="@+id/text_error_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_header_cover"
                android:layout_centerInParent="true"
                android:layout_marginTop="150dp"
                android:text="@string/error_message"
                android:visibility="gone" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_home_menu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/image_header_cover"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="-30dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:visibility="gone"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="24dp"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageButton
                        android:id="@+id/imagebutton_settings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:background="@null"
                        android:src="@drawable/ic_settings"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/text_name"
                        style="@style/titleText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="50dp"
                        android:layout_marginEnd="8dp"
                        android:clickable="true"
                        android:gravity="center"
                        android:maxLines="2"
                        android:onClick="@{clickListener::onProfileClicked}"
                        android:text="@{information.name}"
                        tools:text="Nombre" />

                    <TextView
                        android:id="@+id/text_mail"
                        style="@style/subtitleText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:clickable="true"
                        android:gravity="center"
                        android:maxLines="1"
                        android:onClick="@{clickListener::onProfileClicked}"
                        android:text="@{information.mail}"
                        tools:text="correo@email.com" />

                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:alignmentMode="alignMargins"
                        android:columnCount="3"
                        android:columnOrderPreserved="false"
                        android:minHeight="350dp">


                        <androidx.cardview.widget.CardView
                            android:id="@+id/card_job"
                            style="@style/homeItem"
                            android:onClick="@{clickListener::onJobExperienceClicked}"
                            app:cardCornerRadius="10dp"
                            app:cardElevation="8dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_work" />

                                <TextView
                                    style="@style/homeItemsText"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/experience_label" />

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/card_academy"
                            style="@style/homeItem"
                            android:onClick="@{clickListener::onAcademyClicked}"
                            app:cardCornerRadius="10dp"
                            app:cardElevation="8dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_academy" />

                                <TextView
                                    style="@style/homeItemsText"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/academy_label" />

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/card_courses"
                            style="@style/homeItem"
                            android:onClick="@{clickListener::onCoursesClicked}"
                            app:cardCornerRadius="10dp"
                            app:cardElevation="8dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_course" />

                                <TextView
                                    style="@style/homeItemsText"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/courses_label" />

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/card_certifications"
                            style="@style/homeItem"
                            android:onClick="@{clickListener::onCertificationsClicked}"
                            app:cardCornerRadius="10dp"
                            app:cardElevation="8dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_certifications" />

                                <TextView
                                    style="@style/homeItemsText"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/certifications_label" />

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/card_technical"
                            style="@style/homeItem"
                            android:onClick="@{clickListener::onTechnicalClicked}"
                            app:cardCornerRadius="10dp"
                            app:cardElevation="8dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_technical" />

                                <TextView
                                    style="@style/homeItemsText"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/technical_label"
                                    android:textAlignment="center" />

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/card_facts"
                            style="@style/homeItem"
                            android:onClick="@{clickListener::onFactsClicked}"
                            app:cardCornerRadius="10dp"
                            app:cardElevation="8dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_fun_facts" />

                                <TextView
                                    style="@style/homeItemsText"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/facts_label"
                                    android:textAlignment="center" />

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/card_exracurricular"
                            style="@style/homeItem"
                            android:onClick="@{clickListener::onExtracurricularClicked}"
                            android:visibility="gone"
                            app:cardCornerRadius="10dp"
                            app:cardElevation="8dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_extracurricular" />

                                <TextView
                                    style="@style/homeItemsText"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/extracurricular_label"
                                    android:textAlignment="center" />

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/card_contests"
                            style="@style/homeItem"
                            android:onClick="@{clickListener::onContestsClicked}"
                            android:visibility="gone"
                            app:cardCornerRadius="10dp"
                            app:cardElevation="8dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_contests" />

                                <TextView
                                    style="@style/homeItemsText"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/contests_label"
                                    android:textAlignment="center" />

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/card_books"
                            style="@style/homeItem"
                            android:onClick="@{clickListener::onBooksClicked}"
                            android:visibility="gone"
                            app:cardCornerRadius="10dp"
                            app:cardElevation="8dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_books" />

                                <TextView
                                    style="@style/homeItemsText"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/books_label"
                                    android:textAlignment="center" />

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>


                    </GridLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </RelativeLayout>
    </ScrollView>

</layout>

